Revert "Fix hardcoded IPs"
This reverts commit c1252427ad079cf41e3b07ad3b77e95f383e08f0.

--- a/LoadBalancer/default.conf
+++ b/LoadBalancer/default.conf
@@ -1,14 +1,11 @@
 upstream myapp1 {
-    server frontend-web-2:8081;
-    server frontend-web-1:8080;
+    server 192.168.1.36:8081;
+    server 192.168.1.36:8080;
 }
 
 server {
     listen 80;
     location / {
                 proxy_pass http://myapp1/;
-                proxy_intercept_errors on;
-                error_page 502 503 504 =404;
-                try_files $uri $uri/ =404;
         }
 }
